# embedding-service

./: .gitignore  LICENSE  README.md  deploy.bat  deploy.sh  main.py  pyproject.toml
app/core/: config.py  model_manager.py
app/routes/: embeddings.py  health.py  models.py  rerank.py
app/schemas/: __init__.py
app/services/: __init__.py  embedding_service.py  rerank_service.py
