[project]
name = "embedding-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sentence-transformers>=5.2.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.optional-dependencies]
cpu = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "numpy==1.26.4",
]
gpu = [
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
]
# 量化依赖（可选，仅在启用 8-bit 量化时需要）
quantization = [
    "accelerate>=0.26.0",
    "bitsandbytes>=0.41.0",
]